--- a/src/components/desktop-element-container/styles.module.css
+++ b/src/components/desktop-element-container/styles.module.css
@@ -6,16 +6,27 @@
   flex-wrap: wrap;
   flex-direction: column;
   align-content: flex-start;
-
   padding-bottom: 30px;
+}
+.desktop_elements_mobile {
 }
 
 .desktop_elements p {
   color: white;
 }
+.desktop_elements_mobile p {
+  color: white;
+}
 
 @media screen and (max-width: 400px) {
   .desktop_elements {
+    display: none;
+  }
+  .desktop_elements_mobile {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    padding-bottom: 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(5, 1fr);
