--- a/src/components/desktop/styles.module.css
+++ b/src/components/desktop/styles.module.css
@@ -5,7 +5,3 @@
   background-size: cover;
   overflow: hidden;
 }
-.desktop {
-  max-height: 100%;
-  max-width: 100%;
-}
