--- a/src/components/start-bar/styles.module.css
+++ b/src/components/start-bar/styles.module.css
@@ -41,10 +41,11 @@
   background-color: #107abe;
   box-shadow: inset 0px 10px 10px #ffffff77;
   height: 100%;
+  padding: 1rem;
   color: white;
-  width: 120px;
+  width: fit-content;
+  text-align: center;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 .divider {
@@ -86,13 +87,10 @@
 }
 
 @media screen and (max-width: 400px) {
-  .start {
-    justify-content: center;
-  }
-  .date_time {
+  .start_btn {
     display: none;
   }
-  .start_btn {
-    border-radius: 13px;
+  .start {
+    justify-content: center;
   }
 }
